fixing modal style on mobile

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -62,9 +62,13 @@ body {
 
 @media screen and (max-width: 668px) {
     #modal-window .modal-content {
-        padding: 10px;
-        width: 90%;
-        margin-top: 20px;
+        padding: 5px;
+        width: 95%;
+        margin-top: 5px;
+    }
+
+    .modal-content .modal-header {
+        padding: 5px;
     }
 
 }
